--- a/MapConfigure/packages.config
+++ b/MapConfigure/packages.config
@@ -4,6 +4,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net46" />
   <package id="GMap.NET.Windows" version="1.8.5" targetFramework="net46" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net46" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net46" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net46" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
